IC-2021.3.2 <jared@jared-hp-i7-kubuntu Update Clojure.xml

--- a/templates/Clojure.xml
+++ b/templates/Clojure.xml
@@ -1,6 +1,5 @@
 <templateSet group="Clojure">
-  <template name="pl" value="(println (format &quot;$expr_copy$ ======&gt; %s&quot; $expr$))" description="print with nice formatting" toReformat="false" toShortenFQNames="true">
-    <variable name="expr_copy" expression="" defaultValue="" alwaysStopAt="true" />
+  <template name="pl" value="(println (format &quot;$expr$ ======&gt; %s&quot; $expr$))" description="print with nice formatting" toReformat="false" toShortenFQNames="true">
     <variable name="expr" expression="" defaultValue="" alwaysStopAt="true" />
     <context>
       <option name="Clojure" value="true" />
